[workspace]
members  = ["cli/primes", "lib", "proc/arch", "proc/fwd", "proc/ops"]
resolver = "3"

[workspace.package]
version    = "0.1.0"
edition    = "2024"
license    = "MIT"
repository = "https://github.com/godilov/nd-libr"
homepage   = "https://github.com/godilov/nd-libr"
authors    = ["German Odilov <godilov@tuta.io>"]
categories = ["mathematics", "cryptography", "memory management"]
keywords   = ["math", "cryptography", "nums", "mem"]
readme     = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic       = { level = "deny", priority = 127 }
unwrap_used = { level = "deny", priority = 126 }
expect_used = { level = "deny", priority = 125 }
cargo       = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow             = "1"
clap               = "4"
rand               = "0"
rayon              = "1"
serde              = "1"
serde_json         = "1"
thiserror          = "2"
tokio              = "1"
tracing            = "0"
tracing-subscriber = "0"
zerocopy           = "0"

proc-macro2 = "1"
quote       = "1"
syn         = "2"

criterion = "0"

ndprimes = { path = "cli/primes" }
ndlib    = { path = "lib" }
ndarch   = { path = "proc/arch" }
ndfwd    = { path = "proc/fwd" }
ndops    = { path = "proc/ops" }

[profile.release]
panic = "abort"
lto   = true
