[workspace]
members  = ["cli/*", "lib/*", "proc/*"]
resolver = "3"

[workspace.package]
version    = "0.1.0"
edition    = "2024"
license    = "MIT"
repository = "https://github.com/godilov/nd-libr"
homepage   = "https://github.com/godilov/nd-libr"
authors    = ["German Odilov <godilov@tuta.io>"]
categories = ["mathematics", "cryptography", "memory management"]
keywords   = ["math", "cryptography", "nums", "mem"]
readme     = "README.md"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code  = "deny"

[workspace.lints.clippy]
panic                   = { level = "deny", priority = 127 }
unwrap_used             = { level = "deny", priority = 126 }
expect_used             = { level = "deny", priority = 125 }
cargo                   = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 0 }

[workspace.dependencies]
anyhow             = "1"
alloy-primitives   = "1"
clap               = "4"
rand               = "0"
rayon              = "1"
serde              = "1"
serde_json         = "1"
thiserror          = "2"
tokio              = "1"
tracing            = "0"
tracing-subscriber = "0"
zerocopy           = "0"

proc-macro2 = "1"
quote       = "1"
syn         = "2"

criterion = "0"

ndasm    = { path = "proc/asm" }
ndassert = { path = "proc/assert" }
ndfwd    = { path = "proc/fwd" }
ndops    = { path = "proc/ops" }
ndlibr   = { path = "lib/libr" }
ndcrypto = { path = "lib/crypto" }
ndext    = { path = "lib/ext" }
ndnum    = { path = "lib/num" }
ndmem    = { path = "lib/mem" }
ndevm    = { path = "lib/evm" }
ndprimes = { path = "cli/primes" }

[profile.release]
panic = "abort"
lto   = true
