[package]
name                 = "ndcli"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
authors.workspace    = true
categories.workspace = true
keywords.workspace   = true
readme.workspace     = true
description          = "Nd Lib CLI tool"

[lints]
workspace = true

[dependencies]
clap       = { workspace = true, features = ["derive"] }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

ndlib = { workspace = true }
