[package]
name                 = "ndlib"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
authors.workspace    = true
categories.workspace = true
keywords.workspace   = true
readme.workspace     = true
description          = "Nd Lib"

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }

rand     = { workspace = true, features = ["std_rng", "thread_rng"] }
zerocopy = { workspace = true }

rayon   = { workspace = true }
tokio   = { workspace = true }
tracing = { workspace = true }

ndproc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name    = "long"
harness = false
