[package]
name                 = "ndproc"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
authors.workspace    = true
categories.workspace = true
keywords.workspace   = true
readme.workspace     = true
description          = "Nd Lib Procedural Macroses"

[lints]
workspace = true

[dependencies]
syn         = { workspace = true, features = ["full", "extra-traits", "fold"] }
quote       = { workspace = true }
proc-macro2 = { workspace = true }

[lib]
proc-macro = true
