[package]
name                 = "ndprimes"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
authors.workspace    = true
categories.workspace = true
keywords.workspace   = true
readme.workspace     = true
description          = "Nd Primes CLI tool"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true, features = ["derive"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

ndlib = { workspace = true }

[lints]
workspace = true
