[package]
name = "nd-colors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nd-arr = { path = "../arr" }
nd-num = { path = "../num" }

anyhow = "1"
thiserror = "1"

rayon = "1"
tokio = "1"
tracing = "0"

[dev-dependencies]
criterion = "0"
