[package]
name                 = "ndevm"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
authors.workspace    = true
categories.workspace = true
keywords.workspace   = true
readme.workspace     = true
description          = "Nd Evm Library"

[dependencies]
alloy-primitives = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
