[package]
name                 = "ndlib"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
authors.workspace    = true
categories.workspace = true
keywords.workspace   = true
readme.workspace     = true
description          = "Nd General Library"

[dependencies]
anyhow    = { workspace = true }
rand      = { workspace = true }
rayon     = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
zerocopy  = { workspace = true }

ndarch = { workspace = true }
ndfwd  = { workspace = true }
ndops  = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true
