[package]
name                 = "ndmem"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
authors.workspace    = true
categories.workspace = true
keywords.workspace   = true
readme.workspace     = true
description          = "Nd Memory Library"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
