[package]
name                 = "ndnum"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
authors.workspace    = true
categories.workspace = true
keywords.workspace   = true
readme.workspace     = true
description          = "Nd Numbers Library"

[dependencies]
rand      = { workspace = true, optional = true }
rayon     = { workspace = true, optional = true }
thiserror = { workspace = true }
zerocopy  = { workspace = true }

ndarch = { workspace = true }
ndfwd  = { workspace = true }
ndlib  = { workspace = true }
ndops  = { workspace = true }

[dev-dependencies]
rand      = { workspace = true }
anyhow    = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name    = "long"
harness = false

[features]
default    = ["std", "rand"]
all        = ["std", "dyn", "simd", "rand", "rayon", "const-time"]
std        = []
dyn        = ["std"]
simd       = []
rand       = ["dep:rand"]
rayon      = ["dep:rayon"]
const-time = []
