[package]
name                 = "ndops"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
authors.workspace    = true
categories.workspace = true
keywords.workspace   = true
readme.workspace     = true
description          = "Nd Ops Procedural Macroses"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["full", "extra-traits", "fold"] }

[dev-dependencies]
ndcore = { workspace = true }

[lints]
workspace = true
